Antes de Typescript

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Curso Profesional de Javascript",
   "main": "index.js",
   "scripts": {
-    "start": "live-server"
+    "start": "parcel index.html ejercicios/index.html ejercicios/**/*.html"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "parcel-bundler": "^1.12.4"
   }
 }
